update r cran version

--- a/W1-Introduction/Introduction-to-NLP-with-Quanteda.nb.html
+++ b/W1-Introduction/Introduction-to-NLP-with-Quanteda.nb.html
@@ -246,10 +246,20 @@ $(document).ready(function () {
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
 <!-- rnb-chunk-begin -->
-<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShxdWFudGVkYSlcbmxpYnJhcnkocmVhZHRleHQpXG5saWJyYXJ5KGdncGxvdDIpXG5gYGAifQ== -->
-<pre class="r"><code>library(quanteda)
-library(readtext)
-library(ggplot2)</code></pre>
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShxdWFudGVkYSlcbmBgYCJ9 -->
+<pre class="r"><code>library(quanteda)</code></pre>
+<!-- rnb-source-end -->
+<!-- rnb-output-begin eyJkYXRhIjoicGFja2FnZSDjpLzjuLFxdWFudGVkYeOkvOO4siB3YXMgYnVpbHQgdW5kZXIgUiB2ZXJzaW9uIDMuNS4zXG4ifQ== -->
+<pre><code>package 㤼㸱quanteda㤼㸲 was built under R version 3.5.3</code></pre>
+<!-- rnb-output-end -->
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShyZWFkdGV4dClcbmBgYCJ9 -->
+<pre class="r"><code>library(readtext)</code></pre>
+<!-- rnb-source-end -->
+<!-- rnb-output-begin eyJkYXRhIjoicGFja2FnZSDjpLzjuLFyZWFkdGV4dOOkvOO4siB3YXMgYnVpbHQgdW5kZXIgUiB2ZXJzaW9uIDMuNS4zXG4ifQ== -->
+<pre><code>package 㤼㸱readtext㤼㸲 was built under R version 3.5.3</code></pre>
+<!-- rnb-output-end -->
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShnZ3Bsb3QyKVxuYGBgIn0= -->
+<pre class="r"><code>library(ggplot2)</code></pre>
 <!-- rnb-source-end -->
 <!-- rnb-output-begin eyJkYXRhIjoicGFja2FnZSDjpLzjuLFnZ3Bsb3Qy46S847iyIHdhcyBidWlsdCB1bmRlciBSIHZlcnNpb24gMy41LjNcbiJ9 -->
 <pre><code>package 㤼㸱ggplot2㤼㸲 was built under R version 3.5.3</code></pre>
